# Python-Tls-Client

./: LICENSE  README.md  __init__.py  pyproject.toml  sessions.py  setup.py  structures.py
examples/: example1 - preset.py  example1.py  example2 - custom.py  example3 - async.py  example3- certificate pinning.py
pytls_client/: __version__.py  cffi.py  exceptions.py  sessions.py  structures.py
scripts/: build.bat  update_shared_libraries.py
tls-client/: __version__.py  cffi.py  sessions.py
tls_client/: __init__.py  __version__.py  cffi.py  cookies.py  preparation.py  response.py  sessions.py  settings.py  structures.py
tls_client/async_client/: __init__.py  sessions.py
